--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -5,8 +5,14 @@ jobs:
   First_Job:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4   
+
     - name: Test
       run: echo "test job"
 
     - name:  List Files
       run: ls
+
+    - name: Read Readme
+      run: cat README.md
