--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -1,5 +1,9 @@
 name: GitHub Actions Testing
 on: [workflow_dispatch , push]
+  branches:
+  - master
+  paths-ignore:
+  - '**/README.md'
     
 
 jobs: 
