--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -1,9 +1,10 @@
 name: GitHub Actions Testing
-on: [workflow_dispatch , push]
-  branches:
-  - master
-  paths-ignore:
-  - '**/README.md'
+on: 
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - '**/README.md'
     
 
 jobs: 
